API defined. Dummy data returned by controllers.
